--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-"CLIENT_ID" = b6fe00f2db6c4c708b475b36ac5e62a8
-"CLIENT_SECRET" = 0fe1caca25014e6bb8bb66c21caf43e1
+CLIENT_ID = "11b5e19ca47849189daf67d5f5ed8c0f"
+CLIENT_SECRET = "dd5208041517444cb70f452b188095ec"
